@@ -2004,6 +2004,18 @@ Normative references</h3>
 Other references</h3>
 <!--informative-->
 
+<h2 class="no-num" id="changes">Changes since last publication</h2>
+<p>The following significant changes were made since the <a href="http://www.w3.org/TR/2012/WD-css-masking-20121115/">15 November 2012 Working Draft</a>.</p>
+<ul>
+<li>Better integration with terms and definitions of CSS Backgrounds and Borders module.
+<li>Syntax changes on 'mask' shorthand property to be conform with 'background' shorthand property.
+<li>Define how the implementation can differ between an SVG resource (<a>'mask'</a>, <a>'clipPath'</a>) and an image resource.
+<li>Added 'mask-source-type' property to alter between luminance and alpha mask on 'mask-image'.
+<li>Adapt IDL definition of SVGMaskElement and SVGClipPathElement to WebIDL.
+<li>Further editorial changes.
+</ul>
+<p>See detailed list of changes in the <a href="ChangeLog">ChangeLog</a>.</p>
+
 <h2 class="no-num" id="index">
 Index</h2>
 <!--index-->
