@@ -282,6 +282,8 @@
      <li class=no-num><a href="#other-references"> Other references</a>
     </ul>
 
+   <li class=no-num><a href="#changes">Changes since last publication</a>
+
    <li class=no-num><a href="#index"> Index</a>
 
    <li class=no-num><a href="#property-index"> Property index</a>
@@ -4012,6 +4014,38 @@ p#two { clip: rect(5px, 55px, 45px, 5px); }</code></pre>
    <!---->
   </dl>
   <!--end-informative-->
+
+  <h2 class=no-num id=changes>Changes since last publication</h2>
+
+  <p>The following significant changes were made since the <a
+   href="http://www.w3.org/TR/2012/WD-css-masking-20121115/">15 November 2012
+   Working Draft</a>.
+
+  <ul>
+   <li>Better integration with terms and definitions of CSS Backgrounds and
+    Borders module.
+
+   <li>Syntax changes on ‘<a href="#mask"><code
+    class=property>mask</code></a>’ shorthand property to be conform with
+    ‘<code class=property>background</code>’ shorthand property.
+
+   <li>Define how the implementation can differ between an SVG resource (<a
+    href="#MaskElement"><code class=element-name>&lt;mask></code></a>, <a
+    href="#ClipPathElement"><code
+    class=element-name>&lt;clipPath></code></a>) and an image resource.
+
+   <li>Added ‘<a href="#mask-source-type"><code
+    class=property>mask-source-type</code></a>’ property to alter between
+    luminance and alpha mask on ‘<a href="#mask-image"><code
+    class=property>mask-image</code></a>’.
+
+   <li>Adapt IDL definition of SVGMaskElement and SVGClipPathElement to
+    WebIDL.
+
+   <li>Further editorial changes.
+  </ul>
+
+  <p>See detailed list of changes in the <a href=ChangeLog>ChangeLog</a>.
 
   <h2 class=no-num id=index> Index</h2>
   <!--begin-index-->
