@@ -1,6 +1,10 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-05-22  Dirk Schulze  <dschulze@adobe.com>
+- Clarify that <defs> elements are not going to be masked/clipped.
+- Added section about changes since the last publication.
+
 2013-05-15  Dirk Schulze  <dschulze@adobe.com>
 - Prepare specification for next WD (2).
 
